--- a/package.json
+++ b/package.json
@@ -8,26 +8,17 @@
   "license": "MIT",
   "devDependencies": {
     "@babel/preset-env": "^7.3.4",
-    "@bumble/stream": "^0.2.2",
-    "documentation": "^9.3.0",
     "eslint": "^5.14.1",
     "eslint-plugin-jsdoc": "^4.1.1",
     "jest": "^24.1.0",
     "npm-run-all": "^4.1.5",
+    "power-assert": "^1.6.1",
     "rollup": "^0.68.0",
     "sinon-chrome": "^2.3.2"
   },
   "scripts": {
-    "build": "run-p build:*",
-    "build:rollup": "rollup -c",
-    "build:docs": "npm run docs",
-    "docs": "run-s docs:lint docs:build",
-    "docs:build": "documentation build src/main.js -f md -o readme.md --config documentation.yml",
-    "docs:lint": "documentation lint src/main.js",
-    "docs:watch": "npm run docs:build --watch",
-    "start": "run-p start:*",
-    "start:docs": "run-p docs:watch",
-    "start:rollup": "rollup -c -w",
+    "build": "rollup -c",
+    "start": "rollup -c -w",
     "test": "jest",
     "preversion": "npm run build",
     "postversion": "git push && npm publish"
@@ -39,5 +30,10 @@
   },
   "files": [
     "/build"
-  ]
+  ],
+  "dependencies": {
+    "@bumble/chrome-rxjs": "^0.4.1",
+    "@bumble/timeout": "^0.1.0",
+    "chrome-promise": "^3.0.4"
+  }
 }
