--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   "dependencies": {
     "@bumble/chrome-rxjs": "^0.4.1",
     "@bumble/timeout": "^0.1.0",
-    "chrome-promise": "^3.0.4"
+    "chrome-promise": "^3.0.4",
+    "rxjs": "^6.5.1"
   }
 }
