--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "lib/*.js.map",
     "types/*.d.ts"
   ],
-  "main": "lib/index-cjs.js",
-  "module": "lib/index-esm.js",
+  "main": "lib/index.cjs.js",
+  "module": "lib/index.esm.js",
   "types": "types/index.d.ts",
   "scripts": {
     "build": "run-p build:dev",
@@ -35,40 +35,40 @@
     }
   },
   "dependencies": {
-    "@bumble/chrome-rxjs": "^0.9.2",
+    "@bumble/chrome-rxjs": "^0.9.3",
     "@bumble/timeout": "^0.1.0",
     "chrome-promise": "^3.0.5",
     "rxjs": "^6.5.2"
   },
   "devDependencies": {
     "@sucrase/jest-plugin": "^2.0.0",
-    "@types/chrome": "0.0.81",
+    "@types/chrome": "0.0.88",
     "@types/jest": "^24.0.18",
-    "@types/node": "^12.7.2",
+    "@types/node": "^12.7.3",
     "@types/power-assert": "^1.5.0",
     "@types/puppeteer": "^1.19.1",
     "@types/sinon-chrome": "^2.2.6",
     "chrome-promise": "^3.0.5",
     "delay": "^4.3.0",
-    "eslint": "^5.16.0",
-    "husky": "^3.0.4",
+    "eslint": "^6.3.0",
+    "husky": "^3.0.5",
     "jest": "^24.9.0",
     "npm-run-all": "^4.1.5",
     "power-assert": "^1.6.1",
     "prettier": "^1.18.2",
     "pretty-quick": "^1.11.1",
     "puppeteer": "^1.19.0",
-    "rollup": "^1.20.0",
-    "rollup-plugin-chrome-extension": "^0.16.2",
-    "rollup-plugin-commonjs": "^10.0.2",
-    "rollup-plugin-empty-dir": "^1.0.3",
+    "rollup": "^1.20.3",
+    "rollup-plugin-chrome-extension": "^1.1.2",
+    "rollup-plugin-commonjs": "^10.1.0",
+    "rollup-plugin-empty-dir": "^1.0.4",
     "rollup-plugin-node-resolve": "^5.2.0",
     "rollup-plugin-typescript": "^1.0.1",
-    "rollup-plugin-zip": "^0.4.0",
-    "sinon-chrome": "^2.3.2",
+    "rollup-plugin-zip": "^0.5.1",
+    "sinon-chrome": "^3.0.1",
     "sort-package-json": "^1.22.1",
     "ts-jest": "^24.0.2",
     "tslib": "^1.10.0",
-    "typescript": "^3.5.3"
+    "typescript": "^3.6.2"
   }
 }
