--- a/package.json
+++ b/package.json
@@ -34,30 +34,32 @@
     }
   },
   "dependencies": {
-    "@bumble/chrome-rxjs": "^0.9.3",
+    "@bumble/chrome-rxjs": "^0.10.1",
     "@bumble/timeout": "^0.1.0",
     "chrome-promise": "^3.0.5",
     "rxjs": "^6.5.3"
   },
   "devDependencies": {
     "@sucrase/jest-plugin": "^2.0.0",
-    "@types/chrome": "0.0.88",
-    "@types/jest": "^24.0.18",
-    "@types/node": "^12.7.12",
+    "@types/chrome": "0.0.91",
+    "@types/jest": "^24.0.23",
+    "@types/node": "^12.12.7",
     "@types/power-assert": "^1.5.0",
     "@types/puppeteer": "^1.20.2",
     "@types/sinon-chrome": "^2.2.6",
+    "@typescript-eslint/eslint-plugin": "^2.7.0",
+    "@typescript-eslint/parser": "^2.7.0",
     "chrome-promise": "^3.0.5",
     "delay": "^4.3.0",
-    "eslint": "^6.5.1",
+    "eslint": "^6.6.0",
     "husky": "^3.0.9",
     "jest": "^24.9.0",
     "npm-run-all": "^4.1.5",
     "power-assert": "^1.6.1",
-    "prettier": "^1.18.2",
-    "pretty-quick": "^1.11.1",
-    "puppeteer": "^1.20.0",
-    "rollup": "^1.23.1",
+    "prettier": "^1.19.1",
+    "pretty-quick": "^2.0.1",
+    "puppeteer": "^2.0.0",
+    "rollup": "^1.27.0",
     "rollup-plugin-chrome-extension": "^1.2.6",
     "rollup-plugin-commonjs": "^10.1.0",
     "rollup-plugin-empty-dir": "^1.0.4",
@@ -65,9 +67,9 @@
     "rollup-plugin-typescript": "^1.0.1",
     "rollup-plugin-zip": "^0.5.2",
     "sinon-chrome": "^3.0.1",
-    "sort-package-json": "^1.22.1",
+    "sort-package-json": "^1.23.1",
     "ts-jest": "^24.1.0",
     "tslib": "^1.10.0",
-    "typescript": "^3.6.4"
+    "typescript": "^3.7.2"
   }
 }
