--- a/package.json
+++ b/package.json
@@ -40,6 +40,9 @@
     "rxjs": "^6.5.3"
   },
   "devDependencies": {
+    "@rollup/plugin-commonjs": "^11.0.1",
+    "@rollup/plugin-node-resolve": "^7.0.0",
+    "@rollup/plugin-typescript": "^2.1.0",
     "@sucrase/jest-plugin": "^2.0.0",
     "@types/chrome": "0.0.91",
     "@types/jest": "^24.0.23",
@@ -61,10 +64,7 @@
     "puppeteer": "^2.0.0",
     "rollup": "^1.27.0",
     "rollup-plugin-chrome-extension": "^1.2.6",
-    "rollup-plugin-commonjs": "^10.1.0",
     "rollup-plugin-empty-dir": "^1.0.4",
-    "rollup-plugin-node-resolve": "^5.2.0",
-    "rollup-plugin-typescript": "^1.0.1",
     "rollup-plugin-zip": "^0.5.2",
     "sinon-chrome": "^3.0.1",
     "sort-package-json": "^1.23.1",
