--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "chrome-promise": "^3.0.5",
     "delay": "^4.3.0",
     "eslint": "^6.6.0",
+    "eslint-plugin-jest": "^23.4.0",
     "husky": "^3.0.9",
     "jest": "^24.9.0",
     "npm-run-all": "^4.1.5",
