Convert tests into TS Add jest-in-case Remove sinon-jest Various tweaks

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,5 +5,6 @@
   "eslint.enable": true,
   // "eslint.packageManager": "pnpm",
   "eslint.validate": ["javascript", "typescript"],
-  "typescript.tsdk": "node_modules/typescript/lib"
+  "typescript.tsdk": "node_modules/typescript/lib",
+  "jestrunner.jestPath": "${workspaceFolder}/node_modules/jest/bin/jest.js"
 }
