--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@sucrase/jest-plugin": "^2.0.0",
     "@types/chrome": "0.0.91",
     "@types/jest": "^24.0.23",
+    "@types/jest-in-case": "^1.0.1",
     "@types/node": "^12.12.7",
     "@types/power-assert": "^1.5.0",
     "@types/puppeteer": "^1.20.2",
@@ -52,16 +53,10 @@
     "eslint": "^6.6.0",
     "eslint-plugin-jest": "^23.4.0",
     "jest": "^24.9.0",
+    "jest-in-case": "^1.0.2",
     "npm-run-all": "^4.1.5",
-    "power-assert": "^1.6.1",
     "prettier": "^1.19.1",
-    "puppeteer": "^2.0.0",
     "rollup": "^1.27.0",
-    "rollup-plugin-chrome-extension": "^1.2.6",
-    "rollup-plugin-empty-dir": "^1.0.4",
-    "rollup-plugin-zip": "^0.5.2",
-    "sinon-chrome": "^3.0.1",
-    "sort-package-json": "^1.23.1",
     "ts-jest": "^24.1.0",
     "tslib": "^1.10.0",
     "typescript": "^3.7.2"
