--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
   "module": "lib/index.esm.js",
   "types": "types/index.d.ts",
   "scripts": {
-    "build": "run-p build:dev",
+    "build": "run-p build:dev build:types",
     "build:dev": "rollup -c --environment NODE_ENV:development",
     "build:pro": "rollup -c --environment NODE_ENV:production",
     "build:types": "tsc -p tsconfig.d.json",
-    "build:watch": "npm run build:dev -- -w",
+    "build:watch:rollup": "npm run build:dev -- -w",
+    "build:watch:tsc": "tsc -b tsconfig.d.json -w",
+    "build:watch": "run-p build:watch:*",
     "format": "run-s format:*",
     "format:package": "sort-package-json && git add package.json",
     "format:staged": "pretty-quick --staged",
