--- a/tsconfig.d.json
+++ b/tsconfig.d.json
@@ -6,5 +6,5 @@
     "emitDeclarationOnly": true
   },
   "include": ["src"],
-  "exclude": ["playground", "node_modules", "lib"]
+  "exclude": ["**/__mocks__", "**/*.test.ts"]
 }
