--- a/package.json
+++ b/package.json
@@ -5,30 +5,26 @@
   "repository": "bumble-org/storage",
   "license": "MIT",
   "author": "<jacksteamdev@gmail.com>",
-  "files": [
-    "lib/*.js",
-    "lib/*.js.map",
-    "types/*.d.ts"
-  ],
-  "main": "lib/index.cjs.js",
-  "module": "lib/index.esm.js",
+  "main": "lib/index-cjs.js",
+  "module": "lib/index-esm.js",
   "types": "types/index.d.ts",
+  "files": [
+    "lib",
+    "types",
+    "jest"
+  ],
   "scripts": {
-    "build": "run-p build:dev build:types",
+    "build": "run-s build:clean build:pro build:types",
+    "build:clean": "rm -rf lib types hooks jest",
     "build:dev": "rollup -c --environment NODE_ENV:development",
     "build:pro": "rollup -c --environment NODE_ENV:production",
     "build:types": "tsc -p tsconfig.d.json",
+    "build:watch": "run-p build:watch:*",
     "build:watch:rollup": "npm run build:dev -- -w",
     "build:watch:tsc": "tsc -b tsconfig.d.json -w",
-    "build:watch": "run-p build:watch:*",
-    "format": "run-s format:*",
-    "format:package": "sort-package-json && git add package.json",
-    "format:staged": "pretty-quick --staged",
-    "release:full": "git push && npm publish",
-    "release:beta": "git push && npm publish --tag beta",
+    "prepublishOnly": "run-s build",
     "start": "run-p build:watch",
-    "test": "jest",
-    "preversion": "run-s test build:pro build:types"
+    "test": "jest"
   },
   "dependencies": {
     "@bumble/chrome-rxjs": "^0.10.1",
@@ -37,30 +33,32 @@
     "rxjs": "^6.5.4"
   },
   "devDependencies": {
-    "@rollup/plugin-commonjs": "^11.0.1",
-    "@rollup/plugin-node-resolve": "^7.0.0",
-    "@rollup/plugin-typescript": "^2.1.0",
+    "@rollup/plugin-commonjs": "^11.0.2",
+    "@rollup/plugin-node-resolve": "^7.1.1",
+    "@rollup/plugin-typescript": "^4.0.0",
     "@sucrase/jest-plugin": "^2.0.0",
-    "@types/chrome": "0.0.91",
-    "@types/jest": "^24.9.0",
+    "@types/chrome": "0.0.99",
+    "@types/jest": "^25.1.4",
     "@types/jest-in-case": "^1.0.1",
-    "@types/node": "^13.1.7",
-    "@types/power-assert": "^1.5.3",
-    "@types/puppeteer": "^2.0.0",
-    "@types/sinon-chrome": "^2.2.6",
-    "@typescript-eslint/eslint-plugin": "^2.16.0",
-    "@typescript-eslint/parser": "^2.16.0",
-    "chrome-promise": "^3.0.5",
+    "@types/node": "^13.9.0",
+    "@types/puppeteer": "^2.0.1",
+    "@types/react": "^16.9.23",
+    "@types/react-dom": "^16.9.5",
+    "@typescript-eslint/eslint-plugin": "^2.23.0",
+    "@typescript-eslint/parser": "^2.23.0",
     "delay": "^4.3.0",
     "eslint": "^6.8.0",
-    "eslint-plugin-jest": "^23.6.0",
-    "jest": "^24.9.0",
+    "eslint-plugin-jest": "^23.8.2",
+    "jest": "^25.1.0",
     "jest-in-case": "^1.0.2",
     "npm-run-all": "^4.1.5",
     "prettier": "^1.19.1",
-    "rollup": "^1.29.0",
-    "ts-jest": "^24.3.0",
-    "tslib": "^1.10.0",
-    "typescript": "^3.7.4"
+    "rollup": "^2.0.5",
+    "ts-jest": "^25.2.1",
+    "tslib": "^1.11.1",
+    "typescript": "^3.8.3"
+  },
+  "peerDependencies": {
+    "rxjs": "^6.5.4"
   }
 }
