--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,17 +1,16 @@
 {
   "compilerOptions": {
-    "allowJs": true,
     "allowSyntheticDefaultImports": true,
     "esModuleInterop": true,
     "module": "es2015",
     "moduleResolution": "node",
     "noImplicitReturns": true,
     "noUnusedLocals": true,
-    "outDir": "dist",
     "sourceMap": true,
     "strict": true,
     "target": "es2017",
-    "lib": ["es2017", "dom", "esnext.array"]
+    "lib": ["es2017", "dom", "esnext.array"],
+    "skipLibCheck": true,
   },
-  "exclude": ["lib"]
+  "exclude": ["lib", "playground"]
 }
