--- a/src/jest/package.json
+++ b/src/jest/package.json
@@ -1,5 +1,5 @@
 {
   "main": "./jest-mock-cjs.js",
   "module": "./jest-mock-esm.js",
-  "types": "../types/jest-mock.d.ts"
+  "types": "../types/jest/jest-mock.d.ts"
 }
