--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "@bumble/storage",
+  "name": "@extend-chrome/storage",
   "version": "0.2.1",
-  "description": "This is a wrapper for the Chrome Extension Storage API that adds promises and functional set transactions similar to the React `this.setState` API. Functional set transactions make it easy to use the Chrome Storage API to share and manage state between different contexts in a Chrome Extension.",
-  "repository": "bumble-org/storage",
+  "description": "A wrapper for the Chrome Extension Storage API that adds promises and functional set transactions similar to the React `this.setState` API.",
+  "repository": "extend-chrome/storage",
   "license": "MIT",
   "author": "<jacksteamdev@gmail.com>",
   "files": [
@@ -24,8 +24,8 @@
     ]
   },
   "dependencies": {
-    "@bumble/chrome-rxjs": "^0.5.0",
-    "@bumble/timeout": "^0.1.0",
+    "@extend-chrome/events-rxjs": "^0.12.1",
+    "@types/chrome": "0.0.122",
     "chrome-promise": "^3.0.5",
     "rxjs": "^6.5.2"
   },
