--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "test": "run-s build test:*"
   },
   "dependencies": {
-    "chrome-promise": "^3.0.5"
+    "chrome-promise": "^3.0.5",
+    "rxjs": "^6.5.5 || ^7.1.0"
   },
   "devDependencies": {
     "@rollup/plugin-commonjs": "^12.0.0",
@@ -63,8 +64,5 @@
     "ts-jest": "^26.5.6",
     "tslib": "^2.2.0",
     "typescript": "^4.2.4"
-  },
-  "peerDependencies": {
-    "rxjs": "^6.5.5 || ^7.1.0"
   }
 }
